[package]
name = "cctf-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
base64 = "0.22.1"
chrono = "0.4.45"
fluent-templates = "0.14.0"
hmac = "0.13.0"
regex = "1.12.4"
reqwest = { version = "0.13.4", features = ["json", "form"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
unic-langid = "0.9.6"
uuid = { version = "1.23.3", features = ["v4"] }
