[package]
name = "cctf-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = {version = "0.8.9", features = ["macros"]}
base64 = "0.22.1"
chrono = "0.4.45"
fluent-templates = "0.14.0"
hmac = "0.13.0"
regex = "1.12.4"
reqwest = { version = "0.13.4", features = ["json", "form", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
unic-langid = "0.9.6"
uuid = { version = "1.23.3", features = ["v4"] }
sqlx = { version = "0.8.3", features = [ "runtime-tokio", "postgres", "chrono", "uuid", "json" ] }
tower = { version = "0.5.3", features = ["util"] }
async-trait = "0.1.89"
kube = { version = "4.0.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.28.0", features = ["latest"] }
rhai = { version = "1.25.1", features = ["sync"] }
argon2 = "0.5"
constant_time_eq = "0.3"
dotenvy = "0.15"
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12", "logging"] }
webpki-roots = "1.0"

